--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -414,14 +414,15 @@
         var globalCommentsObject;
         function ModifyComments(commentId)
         {
-            commentsOperationsVariable = commentId;
             console.log("Modify comments Called");
             console.log(commentId);
             var textAreaEditComment = $('#modalEditCommentTextarea');
             var commentToBeModified = globalCommentsObject[commentId];
             textAreaEditComment.val(commentToBeModified.text);
+            commentsOperationsVariable = commentToBeModified.id;
         }
-         function LoadComments(){
+
+        function LoadComments(){
         console.log("Load Comments called");
     	$.ajax({
     		url: '/comment/load/',
@@ -443,15 +444,18 @@
                 		+ ' class="responsive-img circle" title=' + comments[i]['user'] + '></a>'
                 		+ '<div class = "col s12 m12 l12 " comments_inside_div commentsListItem">'
                 		+ '<p style="font-weight: 800" class="commentsListItem ">'
-                		+ '<a class="hide-on-med-and-down" href="/' + comments[i]['user'] + '/">' + comments[i]['user'] + '</a>' + '<span>' + comments[i]['text'] + '</span>'
+                		+ '<a class="hide-on-med-and-down" href="/' + comments[i]['user'] + '/">' + comments[i]['user'] + '</a>' + '<span>&nbsp;&nbsp;' + comments[i]['text'] + '</span>'
                 		+ '</p>' + '</div>'
                             + '<div class="col s12 m6 l6">'
                           +  '<sub class="commentsListItem grey-text">' + comments[i]['time'] + '</sub>' +
-                		 '</div>' +
-                        '<div class ="col s12 m6 l6 ">' +
-                        '<a href="#modalEditComment" onclick="ModifyComments(' + i + ')" >Edit/Delete</a>' +
-                        '</div>' +
-                        '</div></li>'
+                		 '</div>';
+
+                    if(comments[i]['user'] === "{{request.user.username}}"){
+                        str += '<div class ="col s12 m6 l6 ">' +
+                        '<a href="#modalEditComment" onclick="ModifyComments(' + i + ')" ><i class="material-icons">mode edit</i></a>' +
+                        '</div>';
+                    }
+                    str += '</div></li>';
                 }
 
                 comments_div_p.html(str);
@@ -595,8 +599,8 @@
                 commentsSubmitButton.removeClass('disabled');
             });
 
-            /* Events for edit and delete Comments */
 
+            /* Events for edit and delete Comments */
             $('#editCommentButton').click(function () {
 
                 var textAreaEditComment = $('#modalEditCommentTextarea');
@@ -606,29 +610,38 @@
                     commentsSubmitButton.removeClass('disabled');
                     return;
                 }
-
+                
                 // Removing excess white spaces from text area.
                 text.replace(/\s+/g, " ").replace(/^\s|\s$/g, "");
 
-                /* Variable for the index of the comment in the page */
+                // ID of comment to be edited
                 var commentIndex = commentsOperationsVariable;
 
-                /* Write Ajax request here */
-                /* On success call LoadComments Fucntion plese @NikhilKumar */
-                $.ajax();
-
-
+                $.ajax({
+                    url : '/comment/'+commentIndex+'/edit/',
+                    type: 'post',
+                    data: {'text':text},
+                    success :function(data, status){
+                        console.log(data);
+                        $('#modalEditComment').modal('close');
+                        LoadComments();
+                    }
+                });
             });
 
 
             $('#deleteCommentButton').click(function () {
 
-                /* Variable for the index of the comment in the page */
                 var commentIndex = commentsOperationsVariable;
-                  /* Write Ajax request here */
-                /* On success call LoadComments Fucntion plese @NikhilKumar */
-                $.ajax();
-
+                $.ajax({
+                    url : '/comment/'+commentIndex+'/delete/',
+                    type: 'post',
+                    success :function(data, status){
+                        console.log(data);
+                        $('#modalEditComment').modal('close');
+                        LoadComments();
+                    }
+                });
             });
 
 
