Index page fixes

--- a/linkbook/core/templates/core/home.html
+++ b/linkbook/core/templates/core/home.html
@@ -2,5 +2,14 @@
 {% load staticfiles %}
 {% load i18n %}
 {% block title %}Home{% endblock %}
+
+
+
 {% block body %}
+    <script>
+
+        $('.modal').modal();
+
+    </script>
+
 {% endblock body %}
